Updated .gitignore and next.config.mjs, add environment variables

--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 GOOGLE_ID = 1084322578748-2u7tddvv82skv9onqpku3j55kv3ibh5v.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET = 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
-MONGODB_URI = mongodb+srv://ertug3470:46.2.153.65/32@cluster0.npiycvm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI = mongodb+srv://ertug3470:prompt@cluster0.npiycvm.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_URL_INTERNAL = http://localhost:3000
+NEXTAUTH_SECRET = K0xq+/Je1unVhFZcJMMxrGDYogMI9TR1Tnp+wT7jZBw=
